--- a/LibraryManagementSystem/Web/appsettings.json
+++ b/LibraryManagementSystem/Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Web-5bec15d6-0e43-47fc-b9d2-1b292f8f493c;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=195.230.127.185; Database=db2301321002; User ID=stu2301321002; password=Petar2004petrov; MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
