--- a/LibraryManagementSystem/Web/Web.csproj
+++ b/LibraryManagementSystem/Web/Web.csproj
@@ -4,15 +4,14 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>aspnet-Web-5bec15d6-0e43-47fc-b9d2-1b292f8f493c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.30" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.30" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.30" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.30" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.30" />
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 
 </Project>
